--- a/energy-api-app/.tekton/04-pipeline-run.yaml
+++ b/energy-api-app/.tekton/04-pipeline-run.yaml
@@ -8,6 +8,7 @@ apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
   generateName: dotnet-gitops-run-
+  namespace: energy-api-app
 spec:
   pipelineRef:
     name: dotnet-gitops-pipeline
