--- a/energy-api-app/.tekton/05-gitops-trigger.yaml
+++ b/energy-api-app/.tekton/05-gitops-trigger.yaml
@@ -7,6 +7,7 @@ apiVersion: triggers.tekton.dev/v1
 kind: TriggerTemplate
 metadata:
   name: dotnet-gitops-template
+  namespace: energy-api-app
 spec:
   params:
     - name: gitrepositoryurl
