--- a/energy-api-app/.tekton/run/pipelinerun.yaml
+++ b/energy-api-app/.tekton/run/pipelinerun.yaml
@@ -26,4 +26,4 @@ spec:
     - name: IMAGE_URL
       value: "quay.io/therrell/energy-app-api"
     - name: DEPLOY_YAML_PATH
-      value: "base/deploy.yaml"
+      value: "base/deployment.yaml"
