--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    outputs:
+      digest: ${{ steps.build_and_push.outputs.digest }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -15,19 +17,21 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Log in to Docker Hub
+      - name: Log in to Quay.io
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKOCKER_PASSWORD }}
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
 
       - name: Build and push Docker image
+        id: build_and_push
         uses: docker/build-push-action@v2
         with:
           context: ./energy-api-app
           file: ./energy-api-app/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/energy-api:latest
+          tags: quay.io/${{ secrets.QUAY_USERNAME }}/energy-api:latest
 
   update-deployment:
     runs-on: ubuntu-latest
@@ -41,8 +45,8 @@ jobs:
 
       - name: Update deployment manifest
         run: |
-          sed -i "s|image:.*|image: ${{ secrets.DOCKER_USERNAME }}/energy-api:latest|g" energy-deploy/base/deployment.yaml
+          sed -i "s|image:.*|image: quay.io/${{ secrets.QUAY_USERNAME }}/energy-api@${{ needs.build-and-push.outputs.digest }}|g" energy-deploy/base/deployment.yaml
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git commit -am "Update image version"
+          git commit -am "Update image version to ${{ needs.build-and-push.outputs.digest }}"
           git push
