--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Update deployment manifest
         run: |
-          sed -i "s|image:.*|image: quay.io/therrell/energy-app-api@${{ needs.build-and-push.outputs.digest }}|g" energy-deploy/base/deployment.yaml
+          sed -i "s|image:.*|image: quay.io/therrell/energy-app-api@${{ needs.build-and-push.outputs.digest }}|g" base/deployment.yaml
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git commit -am "Update image version to ${{ needs.build-and-push.outputs.digest }}"
